"fix for about section getting overlapped with header"

--- a/public/about.css
+++ b/public/about.css
@@ -116,6 +116,9 @@ article.show {
 /* For mobiles/small device */
 @media screen and (max-width: 600px) {
   /* About */
+  #about {
+    padding: 8rem 0;
+  }
   .about__container {
     grid-template-columns: 1fr;
   }
